--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,9 @@
       "@config/*": ["src/config/*"],
       "@engine/*": ["src/engine/*"],
       "@platform/*": ["src/platform/*"],
-      "@/*": ["src/"]
+      "@/*": ["src/*"]
     }
   },
-  "include": ["src", "vite.config.ts", ".eslintrc.cjs"],
+  "include": ["src", ".eslintrc.cjs"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
